[gd_scene load_steps=35 format=3 uid="uid://cinj525l66hoo"]

[ext_resource type="Script" uid="uid://cs0j0kvct6xf7" path="res://Scripts/Player/scrPlayer.gd" id="1_i4y4g"]
[ext_resource type="Texture2D" uid="uid://3vvx835ga47v" path="res://Graphics/Sprites/Player/sprPlayerClimb.png" id="2_cyx51"]
[ext_resource type="Texture2D" uid="uid://burygy08cq204" path="res://Graphics/Sprites/Player/sprPlayerFall.png" id="2_qff8s"]
[ext_resource type="Texture2D" uid="uid://dd3vx3fvdxdrh" path="res://Graphics/Sprites/Player/sprPlayerIdle.png" id="3_cyx51"]
[ext_resource type="Texture2D" uid="uid://dbu5de27ltlgx" path="res://Graphics/Sprites/Player/sprPlayerJump.png" id="4_2grev"]
[ext_resource type="Texture2D" uid="uid://nc32sed5ti8l" path="res://Graphics/Sprites/Player/sprPlayerRunning.png" id="5_sytnd"]
[ext_resource type="Texture2D" uid="uid://iek6jj5sm1cc" path="res://Graphics/Sprites/Player/sprPlayerSliding.png" id="6_b60wo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2grev"]
atlas = ExtResource("2_cyx51")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sytnd"]
atlas = ExtResource("2_cyx51")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b60wo"]
atlas = ExtResource("2_cyx51")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eu5kx"]
atlas = ExtResource("2_cyx51")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5dja"]
atlas = ExtResource("2_qff8s")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7qgg"]
atlas = ExtResource("2_qff8s")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v86k"]
atlas = ExtResource("3_cyx51")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrxqi"]
atlas = ExtResource("3_cyx51")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnhi4"]
atlas = ExtResource("3_cyx51")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8120"]
atlas = ExtResource("3_cyx51")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cltco"]
atlas = ExtResource("4_2grev")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo52n"]
atlas = ExtResource("4_2grev")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhxw8"]
atlas = ExtResource("5_sytnd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4fa6"]
atlas = ExtResource("5_sytnd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d6w0"]
atlas = ExtResource("5_sytnd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7dx1"]
atlas = ExtResource("5_sytnd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_51kg8"]
atlas = ExtResource("5_sytnd")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqccs"]
atlas = ExtResource("5_sytnd")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_55pgy"]
atlas = ExtResource("6_b60wo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke5h3"]
atlas = ExtResource("6_b60wo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vrq0l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2grev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sytnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b60wo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eu5kx")
}],
"loop": true,
"name": &"climbing",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5dja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7qgg")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v86k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrxqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnhi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8120")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cltco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo52n")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhxw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4fa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8d6w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7dx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51kg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqccs")
}],
"loop": true,
"name": &"running",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_55pgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke5h3")
}],
"loop": true,
"name": &"slidding",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x466q"]
size = Vector2(11, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ewgw8"]
size = Vector2(9, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x6gqu"]
size = Vector2(1, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i4y4g"]
size = Vector2(10.8, 0.906)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0m0v4"]
size = Vector2(11, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y6okb"]
size = Vector2(13, 23)

[node name="objPlayer" type="CharacterBody2D" groups=["Player"]]
z_index = 2
collision_mask = 6
slide_on_ceiling = false
floor_constant_speed = true
floor_block_on_wall = false
floor_snap_length = 8.0
platform_on_leave = 2
platform_floor_layers = 4294967046
script = ExtResource("1_i4y4g")

[node name="playerSpriteOrigin" type="Node2D" parent="."]
position = Vector2(0, 5.5)

[node name="playerSprites" type="AnimatedSprite2D" parent="playerSpriteOrigin"]
sprite_frames = SubResource("SpriteFrames_vrq0l")
animation = &"idle"
offset = Vector2(-1.5, -5.5)

[node name="playerMask" type="CollisionShape2D" parent="."]
editor_description = "Should only detect:
-Walls
-Platforms"
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_x466q")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="ColorRect" type="ColorRect" parent="playerMask"]
visible = false
z_index = 1
offset_left = -5.5
offset_top = -10.5
offset_right = 5.5
offset_bottom = 10.5
color = Color(1, 0, 1, 0.498039)

[node name="extraCollisions" type="Node2D" parent="."]
position = Vector2(0, 5.5)

[node name="Platforms" type="Area2D" parent="extraCollisions"]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="extraCollisions/Platforms"]
visible = false
shape = SubResource("RectangleShape2D_x466q")
debug_color = Color(1, 0.00784314, 0.0509804, 0.419608)

[node name="Killers" type="Area2D" parent="extraCollisions"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="extraCollisions/Killers"]
visible = false
shape = SubResource("RectangleShape2D_x466q")
debug_color = Color(1, 0.00784314, 0.0509804, 0.419608)

[node name="Water" type="Area2D" parent="extraCollisions"]
collision_layer = 0
collision_mask = 128
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="extraCollisions/Water"]
visible = false
shape = SubResource("RectangleShape2D_x466q")
debug_color = Color(1, 0.00784314, 0.0509804, 0.419608)

[node name="IsCrushed" type="Area2D" parent="extraCollisions"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="extraCollisions/IsCrushed"]
visible = false
shape = SubResource("RectangleShape2D_ewgw8")
debug_color = Color(1, 0.00784314, 0.0509804, 0.419608)

[node name="Walljumps" type="Area2D" parent="extraCollisions"]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="extraCollisions/Walljumps"]
visible = false
shape = SubResource("RectangleShape2D_x6gqu")
debug_color = Color(0, 1, 0.0156863, 0.419608)

[node name="SheepBlocks" type="Area2D" parent="extraCollisions"]
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="extraCollisions/SheepBlocks"]
visible = false
shape = SubResource("RectangleShape2D_x466q")
debug_color = Color(1, 0.00784314, 0.0509804, 0.419608)

[node name="PlatformSnap" type="Area2D" parent="extraCollisions"]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="extraCollisions/PlatformSnap"]
visible = false
position = Vector2(0, 9.953)
shape = SubResource("RectangleShape2D_i4y4g")
debug_color = Color(1, 0.00784314, 0.0509804, 0.419608)

[node name="ClimbSurface" type="Area2D" parent="extraCollisions"]
collision_layer = 0
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="extraCollisions/ClimbSurface"]
visible = false
shape = SubResource("RectangleShape2D_x466q")
debug_color = Color(1, 0.00784314, 0.0509804, 0.419608)

[node name="IceBlocks" type="Area2D" parent="extraCollisions"]
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="extraCollisions/IceBlocks"]
visible = false
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_0m0v4")
debug_color = Color(1, 0.00784314, 0.0509804, 0.419608)

[node name="PhysicsObject" type="Area2D" parent="extraCollisions"]
collision_layer = 0
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="extraCollisions/PhysicsObject"]
visible = false
shape = SubResource("RectangleShape2D_y6okb")
debug_color = Color(1, 0.00784314, 0.0509804, 0.419608)

[node name="Wind" type="Area2D" parent="extraCollisions"]
collision_layer = 0
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="extraCollisions/Wind"]
visible = false
shape = SubResource("RectangleShape2D_x466q")
debug_color = Color(1, 0.00784314, 0.0509804, 0.419608)

[connection signal="body_entered" from="extraCollisions/Platforms" to="." method="_on_platforms_body_entered"]
[connection signal="body_exited" from="extraCollisions/Platforms" to="." method="_on_platforms_body_exited"]
[connection signal="body_entered" from="extraCollisions/Killers" to="." method="_on_killers_body_entered"]
[connection signal="area_entered" from="extraCollisions/Water" to="." method="_on_water_area_entered"]
[connection signal="area_exited" from="extraCollisions/Water" to="." method="_on_water_area_exited"]
[connection signal="body_entered" from="extraCollisions/IsCrushed" to="." method="_on_is_crushed_body_entered"]
[connection signal="body_entered" from="extraCollisions/Walljumps" to="." method="_on_walljumps_body_entered"]
[connection signal="body_exited" from="extraCollisions/Walljumps" to="." method="_on_walljumps_body_exited"]
[connection signal="body_entered" from="extraCollisions/SheepBlocks" to="." method="_on_sheep_blocks_body_entered"]
[connection signal="body_exited" from="extraCollisions/PlatformSnap" to="." method="_on_platform_snap_body_exited"]
[connection signal="body_entered" from="extraCollisions/ClimbSurface" to="." method="_on_climb_surface_body_entered"]
[connection signal="body_exited" from="extraCollisions/ClimbSurface" to="." method="_on_climb_surface_body_exited"]
[connection signal="body_entered" from="extraCollisions/IceBlocks" to="." method="_on_ice_blocks_body_entered"]
[connection signal="body_entered" from="extraCollisions/PhysicsObject" to="." method="_on_physics_object_body_entered"]
[connection signal="body_exited" from="extraCollisions/PhysicsObject" to="." method="_on_physics_object_body_exited"]
[connection signal="area_entered" from="extraCollisions/Wind" to="." method="_on_wind_area_entered"]
[connection signal="area_exited" from="extraCollisions/Wind" to="." method="_on_wind_area_exited"]
